# practice

./: .gitignore
cpp-boost.asio/file-transfer/: CMakeLists.txt  client.cpp  client.hpp  protocol.hpp  receiver.cpp  sender.cpp  server.cpp
cpp-boost.asio/master-worker/: CMakeLists.txt  master.cpp  worker.cpp
cpp-boost.asio/master-worker/input/: network.conf  tasks.txt
cpp-boost.asio/tutorial/: CMakeLists.txt  daytime1-client.cpp  daytime2-server.cpp  daytime3-server.cpp  daytime4-client.cpp  daytime5-server.cpp  daytime6-server.cpp  daytime7-server.cpp  timer1.cpp  timer2.cpp  timer3.cpp  timer4.cpp  timer5.cpp
go/: 10_fmt.go  11_immutable.go  12_pointer.go  13_struct.go  14_method.go  15_interface.go  16_concurrency.go  1_hello.go  2_condition.go  4_math.go  5_array.go  6_slice.go  7_map.go  8_funciton.go  9_function2.go
python-ccxt/: exchange.py  test.py
python-difflib/: test.py
python-django-crontab/test_crontab/: manage.py
python-django-crontab/test_crontab/app_crontab/: apps.py  cron.py
python-django-crontab/test_crontab/test_crontab/: asgi.py  settings.py  urls.py  wsgi.py
python-django/mysite/mysite/: settings.py
python-django/mysite/polls/: models.py  views.py
python-django/mysite/polls/templates/polls/: detail.html
python-sqlalchemy/: test_sqlalchemy.py
python-telegram/: send_msg.py
